add stylesheet to CSS

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <p>Title: <span class="show-title"></span></p>
               <p>Showing: <span class="show-time"></span></p>
               <p>Age: <span class="show-age"></span></p>
-              <p>Cost: <span class="show-age"></span></p>
+              <p>Cost: <span class="show-cost"></span></p>
             </div>
           </div>
         </div>
