--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </div>
           <div class="form-group">
             <label for="ageList">Select Age</label>
-            <select class="form-control" id="movieInput">
+            <select class="form-control" id="ageInput">
               <option>Child</option>
               <option>Adult</option>
               <option>Senior</option>
